2001-02-13  Alan Modra  <alan@linuxcare.com.au>

	* elf32-hppa.c (elf32_hppa_set_gp): Handle weak $global$.  If
	$global$ referenced but not defined, set its value here.

2001-02-09  Bo Thorsen  <bo@suse.de>

	* elf64-x86-64.c (elf64_x86_64_check_relocs): Set .rela.got section
	alignment to 3.
	(elf64_x86_64_check_relocs): Write R_X86_64_GOTPCREL GOT entry
	and relocation.
	(elf64_x86_64_relocate_section): Fix formatting.
	(elf64_x86_64_relocate_section): Fix addend for relocation of
	R_X86_64_(8|16|32|PC8|PC16|PC32).

Mon Feb 12 17:44:39 CET 2001  Jan Hubicka  <jh@suse.cz>

	* elf64-x86-64.c (x86_64_elf_howto): Fix name of R_X86_64_GOTPCREL.

2001-02-10  Nick Clifton  <nickc@redhat.com>

	* elf32-v850.c (v850_elf_reloc): Do not convert reloc addend to PC
	rel, it will be handled later on.

2001-02-09  David Mosberger  <davidm@hpl.hp.com>

	* elfxx-ia64.c (is_unwind_section_name): New function.  Returns
	true if section name is an unwind table section name.
	(elfNN_ia64_additional_program_headers): Count each unwind section
	separately.
	(elfNN_ia64_modify_segment_map): Install one unwind program header
	for each unwind separate section.  Note: normally the linker
	script merges the unwind sections that go into a single segment,
	so this still generates at most one unwind program header per
	segment.

	* elfxx-ia64.c (elfNN_ia64_section_from_shdr): Accept any section
	name for SHT_IA_64_UNWIND, not just .IA_64.unwind.
	(elfNN_ia64_fake_sections): Mark sections with names that start
	with .IA_64.unwind but not with .IA_64.unwind_info as an IA-64
	unwind section.

	* elfxx-ia64.c (elfNN_ia64_final_write_processing): New function.
	Use it to make sh_info in unwind section point to the text section
	it applies to.

2001-02-07  Mark Elbrecht  <snowball3@bigfoot.com>

	* coffgen.c (coff_find_nearest_line): If stabs info is successfully
	found, do not attempt to find dwarf2 info before returning.

2001-01-30  Alan Modra  <alan@linuxcare.com.au>
