@@ -1,3 +1,8 @@
+2001-02-13  Richard Henderson  <rth@redhat.com>
+
+	* elfxx-ia64.c (elfNN_ia64_final_link): Set __gp if required
+	and not user provided.
+
 2001-02-13  Alan Modra  <alan@linuxcare.com.au>
 
 	* elf32-hppa.c (elf32_hppa_set_gp): Handle weak $global$.  If
